--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,8 @@
    
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <script src="https://kit.fontawesome.com/ccea519fc9.js" crossorigin="anonymous"></script>
+
     <title> Numeros Psuedo Aleatorios </title>
   </head>
   <body>
